implemented call-backs

--- a/config.ini
+++ b/config.ini
@@ -31,13 +31,13 @@ work dir = /home/mfishel/offweb/translations
 
 # location of the translation script, which
 # is a part of this package
-translation script = /home/mfishel/www/sumat/trsrvdemo/translate_file.pl
-
-# address of the call-back host
-call-back url = http://www.google.com
+translation script = /home/mfishel/offweb/translate_file.pl
 
 # location of the tokenizer script
 tokenizer = /home/mfishel/offweb/scripts/tokenization/tokenizer-modified
 
 # location of the de-tokenizer script
 detokenizer = /home/mfishel/offweb/scripts/detokenizer.perl
+
+# address of the call-back host
+call-back url = http://terra.cl.uzh.ch/trsrvdemo/tmp.php
