re-casing fixed, call-back updated

--- a/config.ini
+++ b/config.ini
@@ -40,4 +40,4 @@ tokenizer = /home/mfishel/offweb/scripts/tokenization/tokenizer-modified
 detokenizer = /home/mfishel/offweb/scripts/detokenizer.perl
 
 # address of the call-back host
-call-back url = http://terra.cl.uzh.ch/trsrvdemo/tmp.php
+call-back url = http://terra.cl.uzh.ch/trsrvdemo/call-back-test-tgt.php
