--- a/config.ini
+++ b/config.ini
@@ -41,3 +41,6 @@ detokenizer = /home/mfishel/offweb/scripts/detokenizer.perl
 
 # address of the call-back host
 call-back url = http://terra.cl.uzh.ch/trsrvdemo/call-back-test-tgt.php
+
+# e-mail address for the call-back e-mail -- NOT IMPLEMENTED YET
+#call-back e-mail = william.shakespeare@gmail.com
